add account.passwordAuthenticationAllowed field
