# src/api/controllers/applicationController.js
@@ -93,6 +93,7 @@ controller.createPasswordResetToken = function(req, res) {
     .then(function(account) {
       ApiError.assert(account, ApiError, 400, 2016, 'The email property value %s does not match a known resource.', req.swagger.params.attributes.value.email);
       ApiError.assert(account.status === 'ENABLED', ApiError, 400, 7101, 'The account is not enabled');
+      ApiError.assert(account.passwordAuthenticationAllowed, ApiError, 400, 7101, 'Password authentication is not allowed for this account');
       //get the directory with its password policy and email templates
       return account.getDirectory({
           include: [{
